...
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="56dp"
        android:background="@color/cream">

        <TextView
            android:id="@+id/memoDetailPrevious"
            android:text="@string/previous"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="7dp"
            android:layout_marginStart="20dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
...
            android:orientation="horizontal"
            app:layout_constraintTop_toBottomOf="@id/memoDetailPrevious"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"/>

        <ImageView
            android:id="@+id/imgForward"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:layout_marginStart="5dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/baseline_arrow_back_ios_new_24"
...
            app:layout_constraintTop_toTopOf="@id/viewPager2"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <ImageView
            android:id="@+id/imgBack"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_marginTop="75dp"
            android:layout_marginEnd="5dp"
            android:layout_marginBottom="17dp"
            android:src="@drawable/baseline_arrow_forward_ios_24"
...
