<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.ListFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream">

        <TextView
            android:id="@+id/txtSearch"
            android:text="@string/search"
            android:layout_marginStart="20dp"
            android:layout_marginTop="10dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <TextView
            android:id="@+id/txtCondition"
            android:text="@string/condition"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="10dp"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            />

        <TextView
            android:id="@+id/priceTotalTxt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:padding="10dp"
            android:gravity="center_vertical"
            android:text="@string/memoDateFrom"
            android:textSize="18sp"
            android:background="@drawable/bottom_navi_background"
            android:drawablePadding="7dp"
            app:layout_constraintTop_toBottomOf="@id/txtCondition"
            app:layout_constraintStart_toStartOf="parent"
            app:drawableStartCompat="@drawable/clover_30"
            />

        <TableRow
            android:id="@+id/tableRowMemo"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toBottomOf="@id/priceTotalTxt"
            >

            <TextView
                android:id="@+id/txtDate"
                android:text="@string/date"
                android:layout_weight="2"
                style="@style/memo_list.title"/>

            <TextView
                android:id="@+id/txtContent"
                android:text="@string/content"
                android:layout_weight="3"
                style="@style/memo_list.title"/>

            <TextView
                android:id="@+id/txtDeposit"
                android:layout_weight="1"
                android:text="@string/deposit"
                style="@style/memo_list.title"
                android:background="@drawable/memo_list_title_background_green2"/>
        </TableRow>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerMemo"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:paddingBottom="56dp"
            android:clipToPadding="false"
            app:layout_constraintTop_toBottomOf="@id/tableRowMemo"
            app:layout_constraintBottom_toBottomOf="parent"
            >
        </androidx.recyclerview.widget.RecyclerView>

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>