<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".view.SearchFragment">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/cream">

        <TextView
            android:id="@+id/previousSearch"
            android:layout_marginTop="55dp"
            android:layout_marginStart="20dp"
            android:text="@string/previous"
            style="@style/defaultFont.click"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            />

        <SearchView
            android:id="@+id/searchView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="55dp"
            android:layout_marginStart="107dp"
            android:layout_marginEnd="20dp"
            android:background="@color/white"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintStart_toEndOf="@id/previousSearch"
            app:layout_constraintEnd_toEndOf="parent"
            app:closeIcon="@drawable/baseline_close_24"
            />

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recyclerSearch"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            app:layout_constraintTop_toBottomOf="@id/previousSearch"
            />

    </androidx.constraintlayout.widget.ConstraintLayout>

</FrameLayout>