...
        android:layout_marginEnd="15dp"
        android:src="@drawable/clover_30"
        android:contentDescription="@string/cloverIcon"
        app:layout_constraintTop_toBottomOf="@id/memoDetailView"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toStartOf="@id/memoDetailPriceTxt"
        app:layout_constraintHorizontal_chainStyle="packed"
        />

    <TextView
        android:id="@+id/memoDetailPriceTxt"
        android:layout_width="wrap_content"
...
